# bevy_extended_material_error

./: Cargo.toml
.config/: config.toml
src/: main.rs
