[package]
name = "extended_material"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default-features = true, features=["dynamic_linking", "asset_processor", "file_watcher", "embedded_watcher"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3